restructured results tree
